--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,90 @@
 
 
     </nav>
+    <div>
+        <div class="gallery1">
+           <h1>Check Out Our Gallery</h1>
+      </div>
 
+      <div>
+       <div class="gallery-text">
+               <p>              Below are some very satisfied customers. We love the opportunity
+                to showcase our work, giving you an idea of the prized fish we have
+                caught last year.
+       </p>
+      </div>
+
+      <div class="container">
+        <div class="gallery">
+            <figure>
+           <a href="https://en.wikipedia.org/wiki/Kingfish" target="_blank">
+          <img src="Aarons King.jpg" width="200px" height="150px">
+        </a>
+          <div class="king-text">
+            <figcaption>Big Kingfish</figcaption>
+
+          </div>
+
+        </figure>
+        <figure>
+            <a href="https://en.wikipedia.org/wiki/Barracuda" target="_blank">
+          <img src="big Barracuda.jpg" width="200px" height="150px">
+        </a>
+          <div class="king-text">
+            <figcaption>Large Barracuda</figcaption>
+          </div>
+
+        </figure>
+
+        <figure>
+            <a href="https://en.wikipedia.org/wiki/Grouper" target="_blank">
+          <img src="big grouper nov 2021.jpg" width="200px" height="150px">
+        </a>
+        <div class="king-text">
+            <figcaption>Nice Grouper</figcaption>
+        </div>
+
+
+
+        </figure>
+
+        <figure>
+          <a href="https://fishingbooker.com/blog/trolling-fishing-technique/" target="_blank">
+          <img src="Deep Drop Cruising.jpg" width="200px" height="150px">
+        </a>
+        <div class="king-text">
+           <figcaption>Deep Sea Trolling</figcaption>
+        </div>
+
+        </figure>
+
+        <figure>
+
+          <a href="https://firedupcharters.com/deep-drop-fishing-cocoa-beach/" target="_blank">
+          <img src="Deep Drop frontal.jpg" width="200px" height="150px">
+        </a>
+        <div class="king-text">
+            <figcaption>The Deep Drop Yacht</figcaption>
+        </div>
+
+        </figure>
+
+        <figure>
+          <a href="https://en.wikipedia.org/wiki/Wahoo" target="_blank">
+          <img src="wahoo with beer.jpg" width="200px" height="150px">
+          </a>
+          <div class="king-text">
+            <figcaption>Fast Wahoo with a Beer</figcaption>
+          </div>
+
+
+        </figure>
+
+
+
+
+        </div>
+
+      </div>
 </body>
 </html>
